--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1> Portofolio Diri</h1>
     <img width="300px" src="IMG20230708184911.jpg"/>
     <p> Perkenalkan nama saya <b> Shafa Aulia</b> saat ini saya sedang menempuh pendidikan di <i> Institut Teknologi Sumatera </i>
-    pada program studi <i> Teknik Informatika </i></p>
+    pada program studi <i> Teknik Informatika </i> angakatan 2022</p>
 
     <h2> Biodata </h2>
     <table border="1">
