--- a/index.html
+++ b/index.html
@@ -6,33 +6,32 @@
 <body>
     <h1> Portofolio Diri</h1>
     <img width="300px" src="IMG20230708184911.jpg"/>
-    <p> Perkenalkan nama saya <b> Shafa Aulia</b> saat ini saya sedang menempuh pendidikan di <i> Institut Teknologi Sumatera </i>
-    pada program studi <i> Teknik Informatika </i> angakatan 2022</p>
-
+    <p> Perkenalkan nama saya <b> SHAFA AULIA</b> saat ini saya sedang menempuh pendidikan S1 di <i> Institut Teknologi Sumatera </i>
+    pada program studi <i> Teknik Informatika </i> <u>angakatan 2022 </u>.
     <h2> Biodata </h2>
     <table border="1">
         <tr> 
-            <td> Nama</td>
-            <td> Shafa Aulia</td>
+            <td> Nama </td>
+            <td> Shafa Aulia </td>
         </tr>
         <tr>
-            <td> NIM</td>
-            <td> 122140062</td>
+            <td> NIM </td>
+            <td> 122140062 </td>
         </tr>
         <tr> 
-            <td> Jenis Kelamin</td>
-            <td> Perempuan</td>
+            <td> Jenis Kelamin </td>
+            <td> Perempuan </td>
         </tr>
         <tr> 
-            <td> Umur</td>
-            <td> 19 tahun</td>
+            <td> Kelompok Kaderisasi </td>
+            <td> 03 </td>
         </tr>
     </table>
     <h2> Pendidikan </h2>
     <ol>
         <li> Insitut Teknologi Sumatera</li>
-        <li> SMAN 1 Bandar Lampung </li>
-        <li> SMPN 1 Bandar Lampung</li>
+        <li> SMAN 1 Bandar Lampung (2019-2022) </li>
+        <li> SMPN 1 Bandar Lampung (2018-2019) </li>
     </ol>
     <h2> Kontak</h2>
     <ul>
@@ -41,6 +40,9 @@
         </li>
         <li>
             <a href="https://instagram.com/shafaa.aulia_">Instagram</a>
+        </li>
+        <li>
+            <a href="mailto:shafaauliaa08@gmail.com">Email</a>
         </li>
     </ul>
 </body>
