--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <td> 03 </td>
         </tr>
     </table>
+    <h2> Pengalaman </h2>
+    <ol> 
+        <li> Pernah menjadi sekretaris bidang bahasa dan literasi OSIS/PK SMAN 1 Bandar Lampung</li>
+        <li> Pernah mengikuti volunteer Local Project Widyawiyata 12.0 AIESEC in UNILA </li>
+    </ol>
     <h2> Pendidikan </h2>
     <ol>
         <li> Insitut Teknologi Sumatera</li>
