--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </table>
     <h2> Pengalaman </h2>
     <ol> 
-        <li> Pernah menjadi sekretaris bidang bahasa dan literasi OSIS/PK SMAN 1 Bandar Lampung</li>
-        <li> Pernah mengikuti volunteer Local Project Widyawiyata 12.0 AIESEC in UNILA </li>
+        <li> Pernah menjadi sekretaris bidang Bahasa dan Literasi OSIS/PK SMAN 1 Bandar Lampung.</li>
+        <li> Pernah mengikuti volunteer Local Project Widyawiyata 12.0 AIESEC in UNILA. </li>
     </ol>
     <h2> Pendidikan </h2>
     <ol>
-        <li> Insitut Teknologi Sumatera</li>
+        <li> Insitut Teknologi Sumatera.</li>
         <li> SMAN 1 Bandar Lampung (2019-2022) </li>
         <li> SMPN 1 Bandar Lampung (2018-2019) </li>
     </ol>
